--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,9 @@
     #heading2 {
         color: #206044;
     }
+    img {
+        border-radius: 10px;
+    }
     @container root style(--darkmode: 1) {
         #home {
             color: #60c0ff;
@@ -89,7 +92,7 @@
         <p class="heading" id="1" style="font-size: 25px"><b>1. Program Streamlit</b></p>
         <div class="container2">
             <!-- <div class="image"> -->
-            <img src="images/streamlit-logo.png" width="150">
+            <img src="images/streamlit-logo.png" style="background-color:white; padding:10px;" width="150">
             <div class="clearfix"></div>
             <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
             <ul>
@@ -105,7 +108,7 @@
         </div><br>
         <p class="heading" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
         <div class="container2">
-            <img src="images/2d-shapes.png" width="250">
+            <img src="images/2d-shapes.png" style="background-color:white; padding:10px;" width="250">
             <div class="clearfix"></div>
             <!-- <p>Ada program bangun datar, cuma bukan Streamlit.<br>Nanti akan mencoba untuk menambahkan bangun ruang di websitenya.</p> -->
             <p>Ada program Bangun Datar dan Bangun Ruang, namun versi ini bukan Streamlit. Beberapa diantaranya sedang menambahkan beberapa fiturnya, sehingga membuat program ini menjadi lebih lengkap.<br></p>
@@ -195,7 +198,8 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 13 Nov 2024<br> -->
-        Terakhir diupdate: 14 Feb 2025<br>
+        <!-- Terakhir diupdate: 14 Feb 2025<br> -->
+        Terakhir diupdate: 5 Maret 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
