--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,6 @@
             <script src="script.js"></script>
         </div> -->
         <div class="top-container2" id="top-container2" style="height:46px;"></div>
-        <script src="script.js"></script>
         <div class="page-container">
             <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
@@ -54,6 +53,8 @@
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a class="page-selected" href="projects.html">Projects</a>
+            <div style="float:right;" id="search"></div>
+            <script src="search.js"></script>
             <div class="clearfix"></div>
         </div>
     </div>
@@ -194,15 +195,16 @@
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
+    <script src="script.js"></script>
     <!-- Terakhir diupdate: 24 Mei 2024<br> -->
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 13 Nov 2024<br> -->
         <!-- Terakhir diupdate: 14 Feb 2025<br> -->
-        Terakhir diupdate: 5 Maret 2025<br>
+        Terakhir diupdate: 6 Maret 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
