--- a/timeline.html
+++ b/timeline.html
@@ -43,6 +43,8 @@
             <a class="page-selected" href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+            <div style="float:right;" id="search"></div>
+            <script src="search.js"></script>
             <div class="clearfix"></div>
         </div>
     </div>
@@ -61,8 +63,7 @@
         <!-- <p class="heading color001" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p> -->
         <p class="heading color002" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
-            <p>
-            <b>Link timeline:</b><br>
+            <p><b>Link timeline:</b></p>
             <ol>
                 <li><a class="link" href="#1">Sebelum Tahun 2020</a></li>
                 <li><a class="link" href="#2">Tahun 2020</a></li>
@@ -72,7 +73,6 @@
 			    <li><a class="link" href="#6">Tahun 2024</a></li>
                 <li><a class="link" href="#7">Tahun 2025</a></li>
             </ol>
-            </p>
         </div>
         <br>
         <p class="heading color002" style="font-size:30px;"><u><b>ISI HALAMAN</b></u></p>
@@ -169,10 +169,11 @@
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
+    <script src="script.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 26 Mei 2024<br> -->
-        Terakhir diupdate: 28 Feb 2025<br>
+        Terakhir diupdate: 6 Maret 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
