--- a/timeline.html
+++ b/timeline.html
@@ -126,7 +126,7 @@
 		
 		<p class="heading" id="6" style="font-size: 25px"><b>6. Tahun 2024</b></p>
 		<div class="container2">
-            <p>Pada tahun 2024 ini</p>
+            <p>Pada tahun 2024 ini, Devan meraih beberapa prestasi dan mengikuti beberapa kegiatan di sekolah.</p>
             <ul>
                 <li>
                     <b>Januari 2024</b><br>
@@ -146,6 +146,22 @@
                     <b>Mei 2024</b><br>
                     - Memenangkan lomba Short Movie dengan juara 1 di kota Semarang
                 </li>
+                <li>
+                    <b>Juli 2024</b><br>
+                    - Hari pertama sekolah kelas 11
+                </li>
+                <li>
+                    <b>Oktober 2024</b><br>
+                    - Lomba Olimpiade Matematika ITS Babak Semifinal
+                </li>
+                <li>
+                    <b>November 2024</b><br>
+                    - Lomba Olimpiade Matematika UGM Babak Semifinal
+                </li>
+                <li>
+                    <b>Desember 2024</b><br>
+                    - Devan sudah Sidi di Gereja
+                </li>
             </ul>
         </div><br>
 
@@ -162,6 +178,9 @@
                 <li>
                     <b>Maret 2025</b><br>
                 </li>
+                <li>
+                    <b>April 2025</b><br>
+                </li>
             </ul>
         </div><br>
 
@@ -173,7 +192,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 26 Mei 2024<br> -->
-        Terakhir diupdate: 6 Maret 2025<br>
+        Terakhir diupdate: 25 April 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
